src/ingress/ingress-nginx-controller.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: ingress-nginx
    meta.helm.sh/release-namespace: retail-store
  creationTimestamp: "2025-11-13T14:30:55Z"
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.14.0
    helm.sh/chart: ingress-nginx-4.14.0
  name: ingress-nginx-controller
  namespace: retail-store
  resourceVersion: "443530"
  uid: c6e103a8-0b17-4dbd-bfaf-7666dfb2ed5b
spec:
  clusterIP: 10.110.113.150
  clusterIPs:
  - 10.110.113.150
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    nodePort: 30523
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    nodePort: 32737
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
